# espresso

./: CHANGELOG.md  Makefile  README.md  cspell.yaml  pyproject.toml  ruff.toml  ty.toml
.github/workflows/: build.yml  pypi-publish.yml
examples/: ripple_example copy.py  ripple_example.py
src/espresso/hfo/: ripple_detector.py
src/espresso/models/: ripple_dataset.py  ripple_event.py
src/espresso/ui/: ripple_control_panel.py  ripple_plot_manager.py  ripple_processor.py  ripple_viewer.py  ripple_viewer_controller.py
src/espresso/ui/components/: bottom_navigation_bar.py  knob_panel.py  signal_plot_renderer.py  signal_processor.py  top_bar.py
src/espresso/ui/misc/: declarative_widgets.py  plots.py  ripple_viewer_old.py  sidebar.py  utils_dock.py
