[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "espresso-neuro"
version = "26.5.14"
description = "A framework for preprocessing, processing, visualization, event detection, and event curation of high-density time-series signals and multi-channel data streams."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Espresso Neuro Maintainers" }]
keywords = [
    "neuroscience",
    "electrophysiology",
    "signal-processing",
    "lfp",
    "ripple-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "PyQt6>=6.11.0",
    "pyqtgraph>=0.14.0",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.13.4",
]

[project.urls]
Repository = "https://github.com/AG-CEN/espresso"
Issues = "https://github.com/AG-CEN/espresso/issues"
Changelog = "https://github.com/AG-CEN/espresso/blob/master/CHANGELOG.md"

[dependency-groups]
dev = ["pytest==9.0.3", "ruff==0.15.13", "ty==0.0.36"]

[tool.hatch.build.targets.wheel]
packages = ["src/espresso"]


[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/tests",
    "/examples",
    ".gitignore",
    "/Makefile",
    "/*.toml",
]
